[tool.poetry]
name = "process-communication"
version = "0.1.0"
description = ""
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
readme = "README.md"
packages = [{include = "process_communication"}]

[tool.poetry.dependencies]
python = "^3.10"
multiprocess = "^0.70.14"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
